added button saves and local storage

--- a/index.html
+++ b/index.html
@@ -18,24 +18,63 @@
     <button id="search">Search</button>
 </form>
 
-<span>
+<span id="cityInfo">
     <h3 id="city-name"></h3>  <!-- add dayjs date -->
     <p id="temp"></p> <!-- add show/hide for when search button is clicked of title for each data -->
     <p id="wind"></p>
     <p id="humidity"></p>
+</span>
     <section id="cityBtn">
        
     </section>
 
-</span>
+
 <section>
     <p id="day1"></p>
+
+</section>
+<div>
+    <p id="forecastTitle"> 5-Day Forecast</p>
+</div>
+<section id="forecasts">
+    
+<span id="D1">
+    <p id="d1Date">date</p> <!-- dayjs date -->
+    <p id="d1Temp"> Temp </p>
+    <p id-="d1Wind"> Wind </p>
+    <p id="d1Humidity">Humidity </p>
+</span>
+<span id="D2">
+    <p id="d2Date">date</p> <!-- dayjs date -->
+    <p id="d2Temp"> Temp </p>
+    <p id-="d2Wind"> Wind </p>
+    <p id="d2Humidity">Humidity </p>
+</span>
+<span id="D3">
+    <p id-="d3Date">date</p> <!-- dayjs date -->
+    <p id-="d3Temp"> Temp </p>
+    <p id-="d3Wind"> Wind </p>
+    <p id="d3Humidity">Humidity </p>
+</span>
+<span id="D4">
+    <p id="d4Date" >date</p> <!-- dayjs date -->
+    <p id="d4Temp"> Temp </p>
+    <p id="d4Wind"> Wind </p>
+    <p id="d4Humidity">Humidity </p>
+</span>
+<span id="D5">
+    <p id ="d5Date">date</p> <!-- dayjs date -->
+    <p id ="d5Temp"> Temp </p>
+    <p id ="d5Wind"></p>> Wind </p>
+    <p id="d5Humidity">Humidity </p>
+</span>
 
 </section>
   <body>
     <main>
         <h1>Welcome to My Website</h1>  
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 	<script src="./assets/js/script.js"></script>
   </body>
