finalized JS and beautified document

--- a/index.html
+++ b/index.html
@@ -14,64 +14,65 @@
 </nav>
 <main>
 
-<form id="city-search">
-    <h2>Search for a City!</h2>
+    <form id="city-search">
+        <h2>Search for a City!</h2>
 
-    <input type="text" id="name" name="Name">
-    <button id="search">Search</button>
-</form>
+        <input type="text" id="name" name="Name">
+        <button id="search">Search</button>
+    </form>
 
 
-<section id="cityBtn">
+    <section id="cityBtn">
 
-</section>
+    </section>
 
-<section id="standardInfo">
-    <p id="day1"></p>
-    <span id="cityInfo">
-        <h3 id="city-name">City Name here</h3> 
-       <p>Temperature:</p> <span id="temp"></span> <span> Degrees F</span>
-        <p>Wind Speed:</p><span id="wind"></span> <span>MPH</span>
-        <p>Humidity:</p><span id="humidity"></span> <span>%</span>
-    </span>
+    <section id="standardInfo">
+        <p id="day1"></p>
+        <span id="cityInfo">
+            <h3 id="city-name"></h3>
+            <p>Temperature:</p> <span id="temp"></span> <span> Degrees F</span>
+            <p>Wind Speed:</p><span id="wind"></span> <span>MPH</span>
+            <p>Humidity:</p><span id="humidity"></span> <span>%</span>
+        </span>
 
-</section>
- <p id="forecastTitle"> 5-Day Forecast</p>
-<section id="forecasts">
-    
-    <span id="D1">
-        <p class="labelText">Date: </p> <span id="d1Date"></span>
-        <p class="labelText">Temperature: </p> <span id="d1Temp"> </span> <span> Degrees F</span>
-        <p class="labelText">Wind Speed:</p> <span id="d1Wind"> </span> <span> MPH</span>
-        <p class="labelText">Humidity:</p><span id="d1Humidity"> </span> <span> %</span>
-    </span>
-    <span id="D2">
-        <p class="labelText">Date: </p> <span id="d2Date"></span>
-        <p class="labelText">Temperature: </p> <span id="d2Temp"></span> <span> Degrees F</span>
-        <p class="labelText">Wind Speed:</p> <span id="d2Wind"></span> <span> MPH</span>
-        <p class="labelText">Humidity:</p> <span id="d2Humidity"></span> <span> %</span>
-    </span>
-    <span id="D3">
-        <p class="labelText">Date: </p> <span id="d3Date"></span>
-        <p class="labelText">Temperature: </p> <span id="d3Temp"></span> <span> Degrees F</span>
-        <p class="labelText">Wind Speed:</p> <span id="d3Wind"></span> <span> MPH</span>
-        <p class="labelText">Humidity:</p> <span id="d3Humidity"></span> <span> % </span>
-    </span>
-    <span id="D4">
-        <p class="labelText">Date: </p> <span id="d4Date"></span>
-        <p class="labelText">Temperature: </p> <span id="d4Temp"></span> <span> Degrees F</span>
-        <p class="labelText">Wind Speed:</p> <span id="d4Wind"></span> <span> MPH</span>
-        <p class="labelText">Humidity:</p> <span id="d4Humidity"></span> <span> %</span>
-    </span>
-    <span id="D5">
-        <p class="labelText">Date: </p> <span id="d5Date"></span>
-        <p class="labelText">Temperature: </p> <span id="d5Temp"></span> <span> Degrees F</span>
-        <p class="labelText">Wind Speed:</p> <span id="d5Wind"></span> <span> MPH</span>
-        <p class="labelText">Humidity:</p> <span id="d5Humidity"></span> <span> %</span>
-    </span>
+    </section>
+    <p id="forecastTitle"> 5-Day Forecast</p>
+    <section id="forecasts">
 
-</section>
+        <span id="D1">
+            <p class="labelText">Date: </p> <span id="d1Date"></span>
+            <p class="labelText">Temperature: </p> <span id="d1Temp"> </span> <span> Degrees F</span>
+            <p class="labelText">Wind Speed:</p> <span id="d1Wind"> </span> <span> MPH</span>
+            <p class="labelText">Humidity:</p><span id="d1Humidity"> </span> <span> %</span>
+        </span>
+        <span id="D2">
+            <p class="labelText">Date: </p> <span id="d2Date"></span>
+            <p class="labelText">Temperature: </p> <span id="d2Temp"></span> <span> Degrees F</span>
+            <p class="labelText">Wind Speed:</p> <span id="d2Wind"></span> <span> MPH</span>
+            <p class="labelText">Humidity:</p> <span id="d2Humidity"></span> <span> %</span>
+        </span>
+        <span id="D3">
+            <p class="labelText">Date: </p> <span id="d3Date"></span>
+            <p class="labelText">Temperature: </p> <span id="d3Temp"></span> <span> Degrees F</span>
+            <p class="labelText">Wind Speed:</p> <span id="d3Wind"></span> <span> MPH</span>
+            <p class="labelText">Humidity:</p> <span id="d3Humidity"></span> <span> % </span>
+        </span>
+        <span id="D4">
+            <p class="labelText">Date: </p> <span id="d4Date"></span>
+            <p class="labelText">Temperature: </p> <span id="d4Temp"></span> <span> Degrees F</span>
+            <p class="labelText">Wind Speed:</p> <span id="d4Wind"></span> <span> MPH</span>
+            <p class="labelText">Humidity:</p> <span id="d4Humidity"></span> <span> %</span>
+        </span>
+        <span id="D5">
+            <p class="labelText">Date: </p> <span id="d5Date"></span>
+            <p class="labelText">Temperature: </p> <span id="d5Temp"></span> <span> Degrees F</span>
+            <p class="labelText">Wind Speed:</p> <span id="d5Wind"></span> <span> MPH</span>
+            <p class="labelText">Humidity:</p> <span id="d5Humidity"></span> <span> %</span>
+        </span>
+
+    </section>
 </main>
+
 <body>
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
