--- a/index.html
+++ b/index.html
@@ -25,46 +25,46 @@
     <section id="cityBtn">
 
     </section>
-
+   
     <section id="standardInfo">
         <p id="day1"></p>
         <span id="cityInfo">
-            <h3 id="city-name"></h3>
+            <h3 id="city-name"></h3> <img id= "icon0" src="http://openweathermap.org/img/wn/10d@2x.png">
             <p>Temperature:</p> <span id="temp"></span> <span> Degrees F</span>
             <p>Wind Speed:</p><span id="wind"></span> <span>MPH</span>
             <p>Humidity:</p><span id="humidity"></span> <span>%</span>
         </span>
-
+  
     </section>
     <p id="forecastTitle"> 5-Day Forecast</p>
     <section id="forecasts">
 
         <span id="D1">
-            <p class="labelText">Date: </p> <span id="d1Date"></span>
+            <p class="labelText">Date: </p> <span id="d1Date"></span> <img id= "icon1" src="http://openweathermap.org/img/wn/10d@2x.png">
             <p class="labelText">Temperature: </p> <span id="d1Temp"> </span> <span> Degrees F</span>
             <p class="labelText">Wind Speed:</p> <span id="d1Wind"> </span> <span> MPH</span>
             <p class="labelText">Humidity:</p><span id="d1Humidity"> </span> <span> %</span>
         </span>
         <span id="D2">
-            <p class="labelText">Date: </p> <span id="d2Date"></span>
+            <p class="labelText">Date: </p> <span id="d2Date"></span> <img id= "icon2" src="http://openweathermap.org/img/wn/10d@2x.png">
             <p class="labelText">Temperature: </p> <span id="d2Temp"></span> <span> Degrees F</span>
             <p class="labelText">Wind Speed:</p> <span id="d2Wind"></span> <span> MPH</span>
             <p class="labelText">Humidity:</p> <span id="d2Humidity"></span> <span> %</span>
         </span>
         <span id="D3">
-            <p class="labelText">Date: </p> <span id="d3Date"></span>
+            <p class="labelText">Date: </p> <span id="d3Date"></span> <img id= "icon3" src="http://openweathermap.org/img/wn/10d@2x.png">
             <p class="labelText">Temperature: </p> <span id="d3Temp"></span> <span> Degrees F</span>
             <p class="labelText">Wind Speed:</p> <span id="d3Wind"></span> <span> MPH</span>
             <p class="labelText">Humidity:</p> <span id="d3Humidity"></span> <span> % </span>
         </span>
         <span id="D4">
-            <p class="labelText">Date: </p> <span id="d4Date"></span>
+            <p class="labelText">Date: </p> <span id="d4Date"></span> <img id= "icon4" src="http://openweathermap.org/img/wn/10d@2x.png">
             <p class="labelText">Temperature: </p> <span id="d4Temp"></span> <span> Degrees F</span>
             <p class="labelText">Wind Speed:</p> <span id="d4Wind"></span> <span> MPH</span>
             <p class="labelText">Humidity:</p> <span id="d4Humidity"></span> <span> %</span>
         </span>
         <span id="D5">
-            <p class="labelText">Date: </p> <span id="d5Date"></span>
+            <p class="labelText">Date: </p> <span id="d5Date"></span> <img id= "icon5" src="http://openweathermap.org/img/wn/10d@2x.png">
             <p class="labelText">Temperature: </p> <span id="d5Temp"></span> <span> Degrees F</span>
             <p class="labelText">Wind Speed:</p> <span id="d5Wind"></span> <span> MPH</span>
             <p class="labelText">Humidity:</p> <span id="d5Humidity"></span> <span> %</span>
